doc/examples/InvalidTests/TestInvalidVector.agl
abc : Vector = (1,"abc"); # Error. Requires numeric operands!
